# projeto-sistemas-distribuidos

./: .gitignore  README.md  pyproject.toml  requirements.txt
admin/: admin_portal_client.py  admin_portal_server.py
domain/client/: client_controller.py  client_repository.py
domain/order/: order_controller.py  order_repository.py
domain/product/: product_controller.py  product_repository.py
order/: order_portal_client.py  order_portal_server.py
proto/: api.proto  api_pb2.py  api_pb2_grpc.py
services/: cache_service.py  storage_service.py
test/: test_script.py
utils/: cache_service.py  decide_chord.py  enums.py  errors.py  get_by_id.py  get_from_hash_map.py  on_receive_message.py  response_messages.py  socket_helper.py
